--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/Elmiratash/EmployeeManagementSystem/issues"
   },
-  "homepage": "https://github.com/Elmiratash/EmployeeManagementSystem#readme"
+  "homepage": "https://github.com/Elmiratash/EmployeeManagementSystem#readme",
+  "dependencies": {
+    "inquirer": "^8.2.0"
+  }
 }
